It actually plays