@@ -1,6 +1,8 @@
 package org.clementine_player.clementine.providers.di;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.clementine_player.clementine.providers.ListItem;
@@ -8,26 +10,24 @@ import org.json.JSONException;
 import org.json.JSONObject;
 
 public class Channel extends ListItem {
-  public URL art_url_;
   public String director_;
-  public String description_;
-  public String name_;
-  public String key_;
   
   public Channel(String service_name, JSONObject object) throws JSONException {
     try {
-      art_url_ = new URL(object.getString("asset_url"));
-    } catch (MalformedURLException e) {
-      // Ignore this
+      media_uri_ = new URI(
+          service_name + "://" + object.getString("key"));
+    } catch (URISyntaxException e) {
+      // Ignore
     }
     
-    description_ = object.optString("description");
-    director_ = object.optString("channel_director");
-    key_ = object.getString("key");
-    name_ = object.getString("name");
+    try {
+      image_url_ = new URL(object.getString("asset_url"));
+    } catch (MalformedURLException e) {
+      // Ignore
+    }
     
-    text_ = name_;
-    url_ = "di://" + service_name + "/" + key_;
-    has_children_ = false;
+    text1_ = object.getString("name");
+    text2_ = object.optString("description");
+    director_ = object.optString("channel_director");
   }
 }
